# githeat

./: Cargo.toml  LICENSE  README.md
src/: git_parser.rs  heatmap.rs  main.rs  tui.rs
